# proxy-reader

./: .gitignore  README.md  auth_proxies.txt  build-upload.sh  check_proxies.py  format.py  pyproject.toml  pyproject.toml.bak  run_tests.py  setup.cfg  setup.py  test_basic.py
proxy_reader/: __init__.py  _types.py  checker.py  constants.py  exceptions.py  logger.py  logger.pyi  logs_config.py  proxy.py  proxy.pyi  reader.py  reader.pyi  types.py  utils.py
proxy_reader-stubs/: _types.pyi  logger.pyi  proxy.pyi  reader.pyi
proxy_reader.egg-info/: PKG-INFO
proxy_reader/models/: proxy.py  results.py
proxy_reader/protocols/: reader.py
src/: setup.py
src/proxy_reader/: reader.py
tests/: README.md  test_checker.py  test_reader.py
