[project]
name = "proxy-reader"
version = "2.1.2"
description = "Proxy reader for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiohttp-socks>=0.9.0",
    "pytest>=8.4.1",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/runetech0/proxy-reader"
github = "https://github.com/runetech0/proxy-reader"


[tool.bumpver]

current_version = "2.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]

"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"proxy_reader/__init__.py" = [
    "{version}",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]

